<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        tools:context=".QuizActivity">

    <RelativeLayout
            android:id="@+id/stats"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
                android:id="@+id/ranking_box"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/tv_stats_margin_left_right"
                android:layout_marginTop="@dimen/boxes_margin_top"
                android:gravity="center"
                android:layout_centerInParent="true"
                android:background="@color/blue_grey_500"
                android:orientation="vertical">
            <TextView
                    android:id="@+id/tv_ranking_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_ranking_label"
                    android:textSize="@dimen/tv_stats_text_size"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/tv_stats_margin_top"
                    android:paddingLeft="@dimen/tv_stats_padding"
                    android:paddingRight="@dimen/tv_stats_padding"/>
            <TextView
                    android:id="@+id/tv_ranking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_ranking"
                    android:textSize="@dimen/tv_stats_text_size"
                    android:textAlignment="center"
                    android:layout_gravity="center_horizontal"
                    android:paddingLeft="@dimen/tv_stats_padding"
                    android:paddingRight="@dimen/tv_stats_padding"/>
        </LinearLayout>

        <ImageView
                android:id="@+id/customer_avatar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerInParent="true"
                android:contentDescription="@string/avatar_description"
                android:background="@color/colorPrimary"
                android:layout_centerHorizontal="true"/>

        <LinearLayout
                android:id="@+id/victories_box"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/tv_stats_margin_left_right"
                android:layout_marginTop="@dimen/boxes_margin_top"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:background="@color/blue_grey_500"
                android:orientation="vertical">
            <TextView
                    android:id="@+id/tv_victories_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_victories_label"
                    android:textSize="@dimen/tv_stats_text_size"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/tv_stats_margin_top"
                    android:paddingLeft="@dimen/tv_stats_padding"
                    android:paddingRight="@dimen/tv_stats_padding"/>
            <TextView
                    android:id="@+id/tv_victories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_victories"
                    android:textSize="@dimen/tv_stats_text_size"
                    android:layout_gravity="center_horizontal"
                    android:paddingLeft="@dimen/tv_stats_padding"
                    android:paddingRight="@dimen/tv_stats_padding"/>
        </LinearLayout>
    </RelativeLayout>


</android.support.constraint.ConstraintLayout>